# SOAF-UPM-Water-Quality-Assessment-Tool

./: README.md  pyproject.toml
src/soaf_wq/: scoring.py  standards.py
src/soaf_wq/tests/: test_scoring.py  test_standards.py
