[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soaf-wq"
version = "0.1.0"
description = "SOAF/UPM water quality impact assessment modules"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/soaf_wq/tests"]
